<resources>
    <string name="app_name">TeamsApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="create_account"> Do not Have Account ? Sign UP</string>
    <string name="forgot_password">forgot password</string>
    <string name="gmaillogin">Login With Gmail</string>
    <string name="user_name">User Name</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cannot_read_image">cannot read image</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="enter_name">Enter Your Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_not_formatted">Email not formatted well</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_cpassword">Enter Confirm Password</string>

    <string name="password_length_error"><![CDATA[Password length must > 6]]></string>

    <string name="event">Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_module">EventModule</string>
    <string name="all_events">All Events</string>
    <string name="my_events">My Events</string>
    <string name="write_a_brief_description_of_event_purpose">Write a Brief Description of Event Purpose</string>
    <string name="description">Description</string>
    <string name="title_of_the_meeting">Title of the meeting</string>
    <string name="title">Title</string>
    <string name="community">Community</string>
    <string name="choose_a_community">Choose a Community</string>
    <string name="location">Location</string>
    <string name="city_place">City , Place</string>
    <string name="date">Date</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="confirm_pass_error">Error Confirm Password</string>
    <string name="check_gender">please check Gender</string>
    <string name="title_activity_profile_view">ProfileViewActivity</string>
    <string name="contact_information">Contact Information</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="birthdate">Birthdate</string>
    <string name="skills">Skills</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="invite_members">Invite Members</string>
    <string name="community_description">Community description</string>
    <string name="write_a_brief_description_about_community">Write a Brief Description  Here! </string>
    <string name="enterdescription">Enter Description</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_member_view_">MemberView_Activity</string>


</resources>
