<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamapp.teamapp.user.ui.RegisterActivity">

    <ImageView
        android:id="@+id/formLogoIV"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bg" />

    <LinearLayout
        android:id="@+id/Linearform"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/formLogoIV"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/LoginemailET"
            style="@style/EditTextStyle"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_user_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/LoginPasswordET"
            style="@style/EditTextStyle"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_pass_icon"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/loginB"
            style="@style/ButtonStyle"
            android:layout_width="250dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/gmailloginTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:text="@string/gmaillogin"
            android:textColor="@drawable/textviewselector"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/RegisterTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linearform"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@drawable/textviewselector"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotpassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisterTV"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="@drawable/textviewselector"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>

