<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamapp.teamapp.user.ui.RegisterActivity">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/formLogoIV"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Get Started"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/UsernameET"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:drawableLeft="@drawable/ic_user_name"
                android:hint="@string/user_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/emailET"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_user_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/PasswordET"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/CpasswordET"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/ic_confirm_icon"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genderET"
                    style="@style/EditTextStyle"
                    android:layout_width="120dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_gender"
                    android:gravity="center"
                    android:text="Gender :"

                    />

                <RadioGroup
                    android:id="@+id/genderRG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp">

                    <RadioButton
                        android:id="@+id/genderRB1"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/genderRB2"
                        style="@style/EditTextStyle"
                        android:gravity="center"
                        android:text="Female" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/registerB"
                style="@style/ButtonStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>

